<resources>
    <string name="label">name</string>
    <string name="label_signup_name">Name</string>
    <string name="label_signup_email">Email</string>
    <string name="label_signup_password">Password</string>
    <string name="label_signup_repeat_password">Repeat Password</string>
    <string name="sign_up_button">sign up</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="login_text">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="app_name">To Do List</string>
    <string name="app_description"> A simple app for bigger problems. It’s a basic to-do list, a reminder,
        a checklist and a task manager that assists you in getting things done.
    </string>
    <string name="get_started">
        Get Started
    </string>
    <string name="passwordStrength_strong">password is Strong</string>
    <string name="passwordStrength_intermidiate">password is Moderate</string>
    <string name="passwordStrength_weak">password is Weak</string>
    <string name="passwords_match">passwords Match</string>
    <string name="passwordsDontMatch">passwords don\'t Match</string>
    <string name="email_valid">email Valid</string>
    <string name="email_not_valid">email Not Valid</string>
    <string name="add_task">Add Task</string>
    <string name="enter_new_task">Enter New Task</string>
    <string name="add_flag">Add Flag</string>
    <string name="choose_date">Choose Date</string>
    <string name="date">Date</string>
    <string name="flag">Flag</string>
    <string name="choose_date_flag">Pick a due Date and a Flag:</string>
    <string name="task_title">Task title</string>
    <string name="description">Description</string>
    <string name="task_description">Task Description</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="all">All</string>
    <string name="work">Work</string>
    <string name="education">Education</string>
    <string name="sports">Sports</string>
    <string name="friends">Friends</string>
    <string name="meetings">Meetings</string>
    <string name="choose_a_due_date">Choose a due date</string>
    <string name="go_back">Go Back</string>
    <string name="added_successfully">The task has been added successfully!</string>
    <string name="updated_successfully">The task has been updated successfully!</string>
    <string name="tasks">Tasks</string>
    <string name="urgency">Urgency</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="select_due_date">Select due date</string>
    <string name="choose_category">Choose at least one Category</string>
    <string name="facebook_app_id">336953091494324</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="channel_name">to do list</string>
    <string name="channel_description">to do lost notification</string>
    <string name="pick_new_date">pick new date</string>

</resources>