<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/header_signup_or_login"
                    android:text="@string/sign_up"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:textSize="69sp"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="#00BCD4"
                    android:textStyle="bold"/>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_signup_name"
                android:fontFamily="@font/quicksand_bold"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:startIconDrawable="@drawable/user_icon"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                app:boxStrokeColor="#00BCD4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_signup_email"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/email_icon"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:fontFamily="@font/quicksand_bold"
                app:boxStrokeColor="#00BCD4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/isEmailValid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingStart="15dp"
                android:text="" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_signup_password"
                app:endIconMode="password_toggle"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:fontFamily="@font/quicksand_bold"
                app:boxStrokeColor="#00BCD4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/passwordStrength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingStart="15dp"
                android:text="" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_signup_repeat_password"
                app:endIconMode="password_toggle"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="1dp"
                app:boxStrokeColor="#00BCD4"
                android:fontFamily="@font/quicksand_bold"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/passwordsMatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="1dp"
                android:paddingStart="15dp"
                android:text="" />
            <Button
                android:id="@+id/go_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="#00BCD4"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="12sp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/containedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00BCD4"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:text="@string/sign_up_button"
                    android:textColor="#fff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/or" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@android:color/black"
                    android:paddingBottom="50dp" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="10dp" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>