<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/header_signup_or_login"
                android:text="@string/login"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textSize="69sp"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="#00BCD4"
                android:textStyle="bold"/>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_signup_email"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/email_icon"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            app:boxStrokeColor="#00BCD4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/isEmailValidLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingStart="15dp"
            android:text="" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_signup_password"
            app:endIconMode="password_toggle"

            app:errorEnabled="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="3dp"
            app:boxStrokeColor="#00BCD4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/go_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"
            android:textSize="12sp"
            android:gravity="left"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="#00BCD4"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:gravity="center"
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text"
                android:fontFamily="@font/quicksand_bold"
                android:backgroundTint="#00BCD4"
                android:textColor="#fff"
                />

            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:paddingTop="15dp"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:paddingBottom="50dp"/>

            <com.google.android.gms.common.SignInButton
                android:gravity="center"
                android:paddingTop="10dp"
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>