<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">


    <LinearLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#00BCD4"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <ImageView
            android:id="@+id/log_out"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:contentDescription="@string/go_back"
            android:focusable="true"
            android:src="@drawable/ic_baseline_exit_to_app_24"
            app:tint="@color/white" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchorGravity="bottom|center">

        <TextView
            android:id="@+id/tasksText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/tasks"
            android:textColor="#00BCD4"
            android:textSize="35sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tasksText"
            android:layout_marginTop="23dp"
            android:nestedScrollingEnabled="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20sp"
        android:backgroundTint="#00BCD4"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        app:fabSize="auto"
        app:srcCompat="@drawable/add"
        app:tint="@color/white" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>